hphp/test/zend/good/Zend/tests/access_modifiers_003.php.expectf
Fatal error: Classes, interfaces, and traits cannot have duplicate modifiers in %s/access_modifiers_003.php on line 3
